# practice

./: .gitignore
3dprojection/: 3dProjPerspective.py  3dRenderer.c  3dproj.py  makefile  polygons.py  rotating_cube.py
Ex_Files_ML_with_Python_Foundations/Exercise Files/02/: 02_02b.ipynb
Ex_Files_ML_with_Python_Foundations/Exercise Files/03/: 03_02b.ipynb  03_04b.ipynb
Ex_Files_ML_with_Python_Foundations/Exercise Files/04/: 04_02b.ipynb  04_04b.ipynb  04_06b.ipynb
ML_by_IBM/: Decision_trees.ipynb  Evaluating Classification Models.ipynb  Evaluating_k-means_clustering.ipynb  Evaluating_random_forest.ipynb  Getting started with Jupyter Notebook.ipynb  KNN_Classification.ipynb  Logistic_Regression.ipynb  ML_Pipelines_and_GridSearchCV.ipynb  Mulitple-Linear-Regression.ipynb  Multi-class_Classification.ipynb  PCA.ipynb  Practice Project.ipynb  Random_ Forests _XGBoost.ipynb  Regression_Trees_Taxi_Tip.ipynb  Regularization_in_LinearRegression.ipynb  Simple-Linear-Regression.ipynb  decision_tree_svm_ccFraud.ipynb
black_hole_visualization/: blackhole.c  blackhole_gpu.c
diff_eqn/: improved_euler.py  mixing.py  oni_heat.py  runge_kutta.py  second_order_euler.py  second_order_runge_kutta.py  solve_pendulum_ode_sample_code.py
docker/: README.md  docker-compose.yml
docker/src/: main.py
practice_c/: CMakeLists.txt  pendulum.c
practice_c/mandelbrot/: makefile  mandelbrot  mandelbrot.c
practice_c/pendulum/: makefile  pendulum.c
spam_detection/: spam.ipynb
titanic/: titanic.ipynb
titanic_invalid/: titanic.ipynb
(+18 files in other folders)
